# ble_gateway_dm_firmware

./: .gitignore  CMakeLists.txt  README.md  app.yml  ble_gateway_dm_firmware.code-workspace  prj.conf  testcase.yaml  version_history.md
app/attributes/: app_params.yml
boards/: bl5340_dvk_cpuapp.conf  bl5340_dvk_cpuapp.overlay  mg100.conf  mg100.overlay  pinnacle_100_dvk.conf  pinnacle_100_dvk.overlay
components/attributes/attributes/: attributes.json  attributes.yml
components/attributes/bl5340_dvk/attributes/: api.json  api.yml  attributes.json  attributes.yml  defaults.txt  max.txt  writable.txt
components/attributes/bl5340_dvk/include/: attr_table.h  attr_util.h
components/attributes/bl5340_dvk/src/: attr_hash.c  attr_table.c
components/attributes/bl5340_lwm2m/attributes/: api.json  api.yml  defaults.txt  max.txt  writable.txt
components/attributes/bl5340_lwm2m/include/: attr_table.h  attr_util.h
components/attributes/bl5340_lwm2m/src/: attr_hash.c  attr_table.c
components/attributes/bl5340_mqtt/attributes/: api.json  api.yml  defaults.txt  max.txt  writable.txt
components/attributes/bl5340_mqtt/include/: attr_table.h  attr_util.h
components/attributes/bl5340_mqtt/src/: attr_hash.c  attr_table.c
components/attributes/bl5340_none/attributes/: api.json  api.yml  defaults.txt  max.txt  writable.txt
components/attributes/bl5340_none/include/: attr_table.h  attr_util.h
components/attributes/bl5340_none/src/: attr_hash.c  attr_table.c
components/attributes/include/: attr_custom_validator.h  attr_table.h
components/attributes/mg100/attributes/: api.json  api.yml  attributes.json  attributes.yml  defaults.txt  max.txt  writable.txt
components/attributes/mg100/include/: attr_table.h
components/attributes/mg100/src/: attr_hash.c  attr_table.c
components/attributes/mg100_lwm2m/attributes/: api.json  api.yml  defaults.txt  max.txt  writable.txt
components/attributes/mg100_lwm2m/include/: attr_table.h  attr_util.h
components/attributes/mg100_lwm2m/src/: attr_hash.c  attr_table.c
components/attributes/mg100_mqtt/attributes/: api.json  api.yml  defaults.txt  max.txt  writable.txt
components/attributes/mg100_mqtt/include/: attr_table.h  attr_util.h
components/attributes/mg100_mqtt/src/: attr_hash.c  attr_table.c
components/attributes/mg100_none/attributes/: api.json  api.yml  defaults.txt  max.txt  writable.txt
components/attributes/mg100_none/include/: attr_table.h  attr_util.h
components/attributes/mg100_none/src/: attr_hash.c  attr_table.c
components/attributes/p100_lwm2m/attributes/: api.json  api.yml  defaults.txt  max.txt  writable.txt
components/attributes/p100_lwm2m/include/: attr_table.h  attr_util.h
components/attributes/p100_lwm2m/src/: attr_hash.c  attr_table.c
components/attributes/p100_mqtt/attributes/: api.json  api.yml  defaults.txt  max.txt  writable.txt
components/attributes/p100_mqtt/include/: attr_table.h  attr_util.h
components/attributes/p100_mqtt/src/: attr_hash.c  attr_table.c
components/attributes/p100_none/attributes/: api.json  api.yml  defaults.txt  max.txt  writable.txt
components/attributes/p100_none/include/: attr_table.h  attr_util.h
components/attributes/p100_none/src/: attr_hash.c  attr_table.c
components/attributes/src/: attr_table.c
config/: b0.bl5340_dvk_cpuapp.conf  b0.mg100.conf  b0.pinnacle_100_dvk.conf  ble.conf  device_management.conf  filesystem.conf  firmware_update.conf  hardware_key.conf  hci_rpmsg.bl5340_dvk_cpunet.conf  lwm2m_telemetry.conf  mbedtls.conf  mcuboot.bl5340_dvk_cpuapp.conf  mcuboot.mg100.conf  mcuboot.pinnacle_100_dvk.conf  memfault.conf  mqtt_telemetry.conf  networking.conf
config/include/: nrf-config-user.h
memfault/bl5340/: memfault_metrics_heartbeat_config.def
memfault/mg100/: memfault_metrics_heartbeat_config.def
scripts/: factory_init.bl5340.sh  factory_init.prod.bl5340.sh  factory_init.prod.mg100.sh  factory_init.prod.p100.sh  factory_init.qa.mg100.sh  factory_init.sh
src/: main.c
src/version/: app_version.h  app_version.h.in
